changes with sid

--- a/ecjsample.tex
+++ b/ecjsample.tex
@@ -14,8 +14,8 @@
 
 \begin{document}
 
-\ecjHeader{x}{x}{xxx-xxx}{201X}{45-character paper description goes here}{A.W. Churchill, S. Sigtia and C. Fernando}
-\title{\bf Learning to Generate Genotypes}  
+\ecjHeader{x}{x}{xxx-xxx}{201X}{Learning to Generate Genotypes with Neural Networks}{A.W. Churchill, S. Sigtia and C. Fernando}
+\title{\bf Learning to Generate Genotypes with Neural Networks}  
 
 \author{\name{\bf Alexander W. Churchill} \hfill \addr{alexanderchurchill@gmail.com}\\ 
         \addr{Queen Mary, University of London}
@@ -25,7 +25,7 @@
 \AND
        \name{\bf Chrisantha Fernando} \hfill \addr{c.fernando@qmul.ac.uk}\\
         \addr{Queen Mary, University of London}
-}Bayesian network
+}
 
 \maketitle
 
@@ -47,22 +47,35 @@ Neural Networks.
 \section{Introduction}
 Evolutionary Algorithms typically employ static exploration methods, such as recombination and mutation, in order to traverse a search space. A problem with this approach is that ``building blocks", by which we mean structural features of the search space, can be easily broken, discarding important information acquired during the search process. Addressing this problem are Estimation of distribution algorithms (EDAs), which attempt to statistically model sections of a search space in order to uncover underlying structure and guide search towards optimal solutions in an efficient manner (\cite{pelikan2006scalable}).
 
-At the heart of any EDA lies a model-building process. Examples include Bayesian Networks, Markov Networks and K-Means clustering (\cite{pelikan2002survey}). In this paper we introduce and investigate two neural-based methods for modelling: a Denoising Autoencoder (dA) and the Neural Autoregressive Distribution Estimator (NADE). An autoencoder is a feed forward neural network, consisting of at least one hidden layer, which is trained to reproduce its inputs from its outputs. Over the course of training, the hidden layer forms a, typically compressed, representation of the inputs, which can be used for various machine learning tasks(\cite{hinton2006reducing}). We explore two special types of autoencoders for learning effective genotypes. The dA is an autoencoder trained using inputs that are stochastically corrupted, which acts as a strong regulariser and also widens the basins of attraction. Although the dA is not a generative model, the encoding process can capture relationships between variables, which when combined with stochastic outputs can provide mutations to seen solutions, guided by the learnt encoded structure of the search space. %We claim that a denoising autoencoder can be used to learn complex probability distributions that define the best genotypes in a generation, and guide search towards promising regions.%
-We also investigate the NADE, an autoencoder instance that explicitly learns a generative model from data, and has been shown to rival a Restricted Boltzmann Machine but with a considerably lower computational cost (\cite{larochelle2011neural}). Results show that an evolutionary algorithm incorporating the autoencoder models is able to outperform a canonical genetic algorithm (GA) across a range of combinatorial optimisation problems, as well as the PBIL and BOA EDA methods in several cases.
+At the heart of any EDA lies a model-building process. Examples include Bayesian Networks, Markov Networks and K-Means clustering (\cite{pelikan2002survey}). In this paper we introduce and investigate two neural-based methods for modelling: a denoising autoencoder (dA) and the Neural Autoregressive Distribution Estimator (NADE). An autoencoder is a feed forward neural network, consisting of at least one hidden layer, which is trained to reproduce its inputs from its outputs. Over the course of training, the hidden layer forms a, typically compressed, representation of the inputs, which has been used in various complex machine learning tasks(\cite{hinton2006reducing}). We explore two special types of autoencoder for learning effective genotypes. The dA is an autoencoder trained using inputs that are stochastically corrupted, which acts as a strong regulariser and also widens the basins of attraction. Although the dA is not a generative model, the encoding process can capture relationships between variables. When combined with stochastic outputs the dA can provide mutations to seen solutions, guided by the learnt encoded structure of the search space. %We claim that a denoising autoencoder can be used to learn complex probability distributions that define the best genotypes in a generation, and guide search towards promising regions.%
+We also investigate the NADE, an autoencoder instance that explicitly learns a generative model from data, and has been shown to rival a Restricted Boltzmann Machine (RBM) but at a considerably lower computational cost (\cite{larochelle2011neural}). Results show that an evolutionary algorithm incorporating the autoencoder models is able to outperform a canonical genetic algorithm (GA) across a range of combinatorial optimisation problems, as well as the PBIL and BOA EDA methods in several cases.
 
 \section{Background}
 
-Since their introduction in \cite{holland1975adaptation}, evolutionary algorithms have themselves evolved, with extensive work exploring representation schemes, operators, parallelisation, co-evolution and multi-objective problems to name but a few areas. One key concern has been to reduce the sensitivity to initial parameters, e.g. self adaptive algorithms (\cite{back1993overview}), and automate the perceived dark art of designing genetic operators. Tackling the latter are Estimation of Distribution Algorithms (EDAs), also known as Probabilistic-Model-Building Genetic Algorithms, which are population based optimisers, that typically replace genetic operators with a statistical model. The rationale behind the model building and related linkage learning approach (e.g. \cite{thierens2010linkage,harik1999linkage}) is that dependencies between variables can be captured and preserved. Search can be biased by sampling from the learnt structure of promising areas of the search space. Early work on EDAs concentrated on methods that explicitly modelled the probabilities of features occurring independently in a population of genotypes. These include the compact Genetic Algorithm (\cite{harik1999compact}), Population-Based Incremental Learner (PBIL) (\cite{baluja1994population}) and Univariate Marginal Probability methods (\cite{pelikan2002survey}). Improved success was found by modelling multivariate dependencies using clustering algorithms, e.g. the Extended Compact Genetic Algorithm (\cite{harik1999linkage}); Bayesian Networks, e.g the Bayesian Optimisation Algorithm (BOA) (pelikan2002scalability); Markov Networks and tree structures, among others (\cite{pelikan2002survey}). The popular and successful CMA-ES can be considered both a type of EDA and self-adaptive algorithm (\cite{hansen2003reducing}).
+Since their introduction in \cite{holland1975adaptation}, evolutionary algorithms have themselves evolved, with extensive work exploring representation schemes, operators, parallelisation, co-evolution and the simultaneous optmisation of multiple objectives to name but a few areas. A key concern has been to reduce the sensitivity to initial parameters, e.g. self adaptive algorithms (\cite{back1993overview}), and automate the perceived dark art of designing genetic operators. Tackling the latter are Estimation of Distribution Algorithms (EDAs), also known as Probabilistic-Model-Building Genetic Algorithms, which are population based optimisers that typically replace genetic operators with a statistical model. The rationale behind the model building and related linkage learning approach (e.g. \cite{thierens2010linkage,harik1999linkage}) is that dependencies between variables can be captured and preserved. Search can be biased by sampling from the learnt structure of promising areas of the search space. Early work on EDAs concentrated on methods that explicitly modelled the probabilities of features occurring independently in a population of genotypes. These include the Compact Genetic Algorithm (\cite{harik1999compact}), \cite{baluja1994population}'s Population-Based Incremental Learner (PBIL) and Univariate Marginal Probability methods (\cite{pelikan2002survey}). Improved success was found by modelling multivariate dependencies using clustering algorithms, e.g. the Extended Compact Genetic Algorithm (\cite{harik1999linkage}); Bayesian networks, e.g \cite{pelikan2002scalability}'s Bayesian Optimisation Algorithm (BOA); Markov networks and tree structures, among many others (\cite{pelikan2002survey}). The popular and successful CMA-ES optimiser can be considered both a type of EDA and self-adaptive algorithm (\cite{hansen2003reducing}). 
 
 %Our use of the autoencoder model is motivated by its potential to learn high-dimensional non-linear dependencies in data, while maintaining a low computational cost in terms of training time. 
-Neural networks and evolutionary computation have a rich intertwined history. They most commonly appear together when an evolutionary algorithm is used to optimise the parameters and topology of a neural network for reinforcement learning problems or when a neural network is applied as a surrogate fitness function to aid the optimisation of expensive fitness functions. In the first case, initial work directly encoded the synaptic weights, such as in \cite{montana1989training}. This has been found to have serious limitations and modern work such as Hyper-NEAT (\cite{stanley2009hypercube}) employs indirect encodings that allow both the weights and topologies of large networks to be successful optimised simultaneously. Other than using evolutionary techniques to effectively train neural networks, there has also been interest in employing neural networks in the search process. Early work has shown that including learning in evolution can improve the effectiveness and efficiency of optimisation, e.g. (\cite{hinton1987learning,nolfi1994learning}). This is the standpoint taken in this paper but coming from a different perspective. While the evolutionary algorithm in (\cite{hinton1987learning,nolfi1994learning}) is applied to optimising a neural network and uses learning through backpropagation (\cite{rumelhart1988learning}) in a Baldwinian or Lamarckian process, here we use neural networks to learn to generate incrementally more effective genotypes, either through a guided mutation (with the denoising autoencoder) or a learnt distribution (with the NADE).
+Artificial neural networks and evolutionary computation have a rich intertwined history. They most commonly appear together when an evolutionary algorithm is used to optimise the parameters and topology of a neural network for reinforcement learning problems or when a neural network is applied as a surrogate fitness function to aid the optimisation of expensive evaluation functions. In the first case, early research directly encoded the synaptic weights of a neural network, such as in \cite{montana1989training}. This has been found to have serious limitations and modern work, such as Hyper-NEAT (\cite{stanley2009hypercube}), employs indirect encodings that allow both the weights and topologies of large networks to be successful optimised simultaneously. Other than using evolutionary techniques to effectively train neural networks, there has also been interest in employing neural networks directly in the search process. Early work has shown that including learning in the evolutionary process can improve the effectiveness and efficiency of optimisation, e.g. (\cite{hinton1987learning,nolfi1994learning}). This is the standpoint taken in this paper but coming from a different perspective. The evolutionary algorithms in (\cite{hinton1987learning,nolfi1994learning}) are applied to optimising a neural network and integrate learning through backpropagation (\cite{rumelhart1988learning}) as a Baldwinian or Lamarckian process. Here, we use the unsupervised learning capabilities of neural networks to learn to generate incrementally more effective genotypes, either through a guided mutation (with the denoising autoencoder) or a learnt distribution (with the NADE).
 
-With the `neural networks revival' of the last decade, which has seen neural network methods frequently outperforming other machine learning techniques, there has been interest in neural-based methods in an EDA context, particularly for multi-objective optimisation. A Growing Neural Gas (GNG) was used as a model in \cite{marti2008introducing}, employing a competitive Hebbian learning rule to cluster data without having to pre specify the number of groups. A shallow Restricted Boltzmann Machine (RBM) was used to model high dimensional data in (\cite{tang2010restricted},shim2013multi), beating the state-of-the-art on several multi-objective continuous benchmark problems. Helmholtz machines have also been applied to this task with promising results \cite{zhang2000bayesian}. Autoencoders (also known as auto-associators) are also neural-based method for unsupervised learning and have hitherto not been applied to combinatorial optimisation problems. As we will see in the next section, autoencoders have several interesting properties which can be favourably exploited to learn to generate genotypes in an evolutionary algorithm.
+With the `neural networks revival' of the last decade, which has seen neural network methods frequently outperforming other machine learning techniques, there has been interest in neural-based methods in an EDA context, particularly for multi-objective optimisation. A Growing Neural Gas (GNG) was used as a model in \cite{marti2008introducing}, employing a competitive Hebbian learning rule to cluster data without having to pre specify the number of groups. A shallow Restricted Boltzmann Machine (RBM) was used to model high dimensional data in (\cite{tang2010restricted,shim2013multi}), beating the state-of-the-art on several multi-objective continuous benchmark problems. Helmholtz machines have also been applied to this task with promising results (\cite{zhang2000bayesian}). Autoencoders (often referred to in the literature as auto-associators) are also neural-based method for unsupervised learning and have hitherto not been applied to combinatorial optimisation problems. As we will see in the next section, autoencoders have several interesting properties which can be favourably exploited to learn to generate genotypes in an evolutionary algorithm.
 
-Another motivation for using an autoencoder approach is to investigate methods in which evolutionary algorithms can be implemented using neural structures. The {\em{Neural Replicator Hypothesis}} \cite{fernando2010neuronal} proposes that evolutionary dynamics could operate in the brain at ontogenetic timescales. In \cite{fernando2010neuronal}, a (1+1)-ES is implemented in a network of spiking neurons. Adding Hebbian learning enabled linkages to be found between features, and the 128-bit HIFF problem to be solved significantly faster than by a genetic algorithm. However, Hebbian learning is restricted to learning only pairwise relationships between variables, while autoencoders have the potential to learn complex multivariate interactions.
+Another motivation for using an autoencoder approach is to investigate methods in which evolutionary algorithms can be implemented using neural structures. The {\em{Neural Replicator Hypothesis}} (\cite{fernando2010neuronal}) proposes that evolutionary dynamics could operate in the brain at ontogenetic timescales. In \cite{fernando2010neuronal}, a (1+1)-ES is implemented in a network of spiking neurons. Adding Hebbian learning enabled linkages to be found between features, and the 128-bit HIFF problem to be solved significantly faster than by a genetic algorithm. However, Hebbian learning is restricted to learning only pairwise relationships between variables, while autoencoders have the potential to learn complex multivariate interactions. Although the training method employed in this paper is not thought to be biologically plausible, success with these models would suggest that unsupervised learning in neural structures can provide an effective means of evolutionary search.
 
 \section{Methods}
 
+\subsection{Motivation}
+
+The main motivation for this paper is to assess whether neural network unsupervised learning methods can be used to learn genotypes. In the evolutionary computation literature this topic has mainly been investigated in the context EDAs. Typically, EDAs use unsupervised machine learning techniques to estimate distributions, i.e. build generative models, over the space of good quality solutions. Novel solutions are produced at each generation by updating and sampling from these distributions. An alternative approach is to use models that learn an encoding or compress the solution space, e.g. the generative grammar of \cite{cox2014solving}. Our proposed use of the denoising autoencoder deviates from the more standard generative model approach. Instead of learning a distribution over the entire solution space, we directly learn a mapping from a given input to a distribution over potential solutions. By carefully choosing the inputs to the autoencoder and the corruption noise, we can generate better solutions at each iteration. The autoencoder is a deterministic, feed-forward neural network architecture that does not presume a graphical structure like Bayesian networks and RBMs. The autoencoder can be trained online with mini-batch gradient descent which allows us to update the model at each iteration without having to rebuild the model every time. This implies the network has a slowly decaying memory over the good solutions and that interesting features learnt at one generation can be carried forward to future generations.
+
+The alternative algorithm that we explore uses a NADE for model building, which is a distribution estimator for high-dimensional binary data. This algorithm is more like a standard EDA. The potential benefits of using the NADE is that it breaks down the difficult problem of learning a complex high-dimensional distribution to the problem learning a product of one-dimensional distributions. The NADE is a tractable approximation to the RBM and is therefore computationally more efficient to train and sample from when compared to the RBM. The RBM has already been applied successfully to multi-objective optimisation and therefore it would be interesting to see how the NADE performs in an EDA. The gradients of the objective function for training the NADE can be obtained exactly and therefore we can use powerful optimisers for better online training. Because the NADE can be trained online, we don't need to discard information between iterations. Another advantage of using the NADE, is that it can be easily extended to real-valued data. This is in contrast to other Bayesian EDAs like the BOA and the h-BOA. 
+
+
+
+% Typically, an EDA consists of a generative probabilistic model or some other unsupervised learning technique to learn the structure and dependencies of the good solutions at every generation. The way we propose to use the autoencoder deviates slightly from the standard EDA. We do not use the autoencoder to learn a probability distribution over good solutions, like in an EDA. Instead we use the autoencoder to directly learn a mapping from 
+
+% The structure can be learnt either by using generative models (many many examples), or techniques that create a compressed representation like the generative grammar (Watson). 
+
+% Although neural networks are normally seen as supervised methods (classification, regression), much of their success is due to their ability to learn features in an unsupervsied way. 
 \subsection{The Autoencoder}
 
 %In this paper, we present a system that uses a denoising autoencoder (dA) to model the structure of the best solutions at each generation. New solutions at each generation are produced by sampling from the dA. Therefore, the two primary uses of the dA are for model building and sampling new solutions. The population of good solutions at each generation can be assumed to be a sample from a data generating distribution. Data generating distributions for high-dimensional data often have complex structure that cannot be modelled accurately by simple probabilistic models. We argue that by using the dA, we can learn complex structure present in the distribution of good solutions and use the new samples to guide search effectively. 
@@ -83,24 +96,32 @@ The autoencoder learns an encoding or representation of the input space in order
 
 
 In our algorithm we use a denoising autoencoder which is a variant of the standard autoencoder \cite{vincent2008extracting}. The dA tries to recreate the input $\mathbf x$ from `corrupted' or `noisy' versions of the input, which are generated by a stochastic corruption process $\mathbf{\tilde x = q(\tilde x|x)}$. Adding the denoising criterion to the model forces the autoencoder to learn more robust representations which are invariant to small perturbations of the input. Alternatively, the denoising criterion can be seen as learning an operator that maps points that are far from the manifold towards points on or near the manifold on which the good solutions are concentrated. Although denoising was introduced in order to encourage the learning of more robust representations, in our system we employ the denoising criterion to widen the basins of attraction around the best individuals in every generation. During training, we train the autoencoder on the most promising solutions, and by increasing corruption we encourage individuals that are far away from the training set to move towards the nearest high quality solution. By making use of the corruption noise as a tuneable parameter, the extent of the basins of attraction can be controlled, with high corruption giving rise to large basins of attraction.
+\begin{figure}[t!]
+\centering
+\includegraphics[scale=0.5]{boxplots_basins.png}
+\caption{Hamming distances to optimal solution on the MaxOnes problem when training the dA with different corruption levels.}
+\label{fig:corruption_hamming}
+\end{figure}
 
-We perform another experiment to test the effect of corruption noise on the outputs of the dA. We argue that increasing corruption noise widens the basin of attraction around the training examples. In this experiment, we train the GA on a 20-bit MaxOnes problem. The choice of the problem was motivated by the fact that MaxOnes has a unique optimum solution and the hamming distances from the optimal solution are easy to interpret. We allow the GA to run for 10 iterations and train the autoencoder on the best solutions at every iteration. The inputs to the dA are corrupted by a binary corruption process that stochastically flips a fixed proportion of bits for each example. The autoencoder is then trained to reconstruct the true targets from the corrupted inputs. After 10 iterations we present a set of randomly generated input vectors and sample a new population from the dA. We repeat this experiment with different corruption rates and the same set of input vectors and  plot the hamming distances of the new population from the optimum solution. From figure 3 we observe that increasing the corruption rate leads to a decrease in the hamming distances. This shows that as corruption noise is increased, the outputs of the dA are more likely to be closer to an example in the training set.
+We perform another experiment to test the effect of corruption noise on the outputs of the dA. We argue that increasing corruption noise widens the basin of attraction around the training examples. In this experiment, we train the GA on a 20-bit MaxOnes problem. The choice of the problem was motivated by the fact that MaxOnes has a unique optimum solution and the hamming distances from the optimal solution are easy to interpret. We allow the GA to run for 10 iterations and train the autoencoder on the best solutions at every iteration. The inputs to the dA are corrupted by a binary corruption process that stochastically flips a fixed proportion of bits for each example. The autoencoder is then trained to reconstruct the true targets from the corrupted inputs. After 10 iterations we present a set of randomly generated input vectors and sample a new population from the dA. We repeat this experiment with different corruption rates and the same set of input vectors and  plot the hamming distances of the new population from the optimum solution. From figure \ref{fig:corruption_hamming} we observe that increasing the corruption rate leads to a decrease in the hamming distances. This shows that as corruption noise is increased, the outputs of the dA are more likely to be closer to an example in the training set.
 
 \subsection{Neural Autoregressive Distribution Estimator}
 
 Although the outputs of the decoder network can be viewed as the parameters of a probability distribution, the autoencoder is inherently a deterministic unsupervised learning algorithm. The Neural Autoregressive Distribution Estimator (NADE) is a bayesian network for density estimation of high dimensional binary data. The NADE can be viewed as an autoencoder architecture devised such that the output units represent valid probabilities. The initial inspiration for the NADE was as a tractable approximation to the Restricted Boltzmann Machine (RBM). Restricted Boltzmann Machines have been used in EDAs for multi-objective optimisation in the past (reference). However, the NADE has been demonstrated to be an accurate density estimator on its own and has been used for various applications (refs). 
 
-The NADE belongs to the family of fully visible bayesian networks that factorise the joint distribution of some data $x$ as a product of one-dimensional conditional distributions:
-$$ P(x) = \prod_{i=1}^{D} P(x_i|x_{<i})$$ where $x_{<i} \equiv \left\{ x_k, \forall k < i \right\} $  and $D$ is the dimensionality of the input space. The main advantage of the factorisation above is that instead of trying to model a complex high-dimensional multi-modal distribution for $x$, the problem can be simplified to estimating the one-dimensional conditionals $P(x_i|x_{<i})$. A complex distribution can be estimated accurately if each conditional is learnt cosrrectly. For the NADE: 
-$$P(v_i=1|v_{i<i}) =  \sigma(b_i + W_{i,.}\sigma(c+W_{.,<i}x_{<i}))$$ where $W_{.,<i}$ denotes a submatrix of $W$ with colums $1$ to $i-1$. 
-The above network is equivalent to a feed-forward neural network for each conditional, with weight sharing between the neural networks. The tied connections distinguish the NADE from other fully visible bayesian networks and make it computationally tractable to train and obtain probabilities at test time. Another advantage while using the NADE is that the log-likelihood and therefore the gradients can be computed exactly. This implies that the model can be trained with powerful gradient based optimisers without having to resort to sampling to estimate the log-likelihood like in training RBMs. 
+The NADE belongs to the family of fully visible Bayesian networks that factorise the joint distribution of some $D$ dimensional data point $x$ as a product of one-dimensional conditional distributions:
+$$ P(x) = \prod_{i=1}^{D} P(x_i|x_{<i})$$ where $x_{<i} \equiv \left\{ x_k, \forall k < i \right\} $  and $D$ is the dimensionality of the input space. The main advantage of the factorisation above is that instead of trying to model a complex high-dimensional multi-modal distribution for $x$, the problem can be simplified to estimating the one-dimensional conditionals $P(x_i|x_{<i})$. A complex distribution can be estimated accurately if each conditional is learnt correctly. For the NADE: 
+$$P(v_i=1|v_{i<i}) =  \sigma(b_i + W_{i,.}h_i)$$
+$$ h_i = \sigma(c+W_{.,<i}x_{<i})$$ where $W_{.,<i}$ denotes a sub-matrix of $W$ with columns $1$ to $i-1$. 
+The above network is equivalent to a feed-forward neural network for each conditional, with weight sharing between the neural networks. The tied connections distinguish the NADE from other fully visible Bayesian networks and make it computationally tractable to train and obtain probabilities at test time. Another advantage while using the NADE is that the log-likelihood and therefore the gradients can be computed exactly. This implies that the model can be trained with powerful gradient based optimisers without having to resort to sampling to estimate the log-likelihood like in training RBMs. 
 
+A theoretical limitation when using the NADE is the fact that the structure of the Bayesian graph is chosen \emph{a priori}. The NADE joint distribution is explicitly ordered from left to right. The NADE also assumes a dependence between a visible unit and all units preceding the unit. Theoretically, the ordering of the NADE should not affect density estimation given that each of the conditionals can be estimated accurately. However we did observe that assuming dependencies that don't......Add a little bit about back-propagation. 
 
 \subsection{Optimisation Algorithm}
 
 The pipeline of the optimisation algorithm is similar to canonical EDAs and is inspired by methods in HBOA (\cite{hboa}). Pseudocode is provided in Algorithm 1 below. A population of \(P\) solutions is maintained, \(pop_t\), and updated at each iteration, \(t\). An initial population of solutions, \(pop_0\), is drawn from a uniform distribution. These solutions are evaluated and the fittest unique x\% are selected (i.e. truncation selection) to be in the training set, \(trainingData_t\). The model, \(model_t\), is then trained with \(trainingData_t\) for \(E\) epochs. Following training, \(P\) solutions are stochastically sampled from the model and stored in \(samples_t\). Solutions from \(samples_t\) are then incorporated into \(pop_{t+1}\).
 
-There are slight differences in the algorithm based on the neural network model. For the denoising autoencoder (GA-dA), \(trainingData_t\) consists of the fittest unique x\% of solutions from the population are selected. For generating samples in GA-dA, a new set of solutions, \(input_t\), is selected from \(P\) using tournament selection (with replacement). Each member of \(input_t\) is inputted to the dA model, and the output vector, \(y_t\), is sampled from using a binomial distribution, to produce a new solution. For the NADE model (GA-NADE), solutions are sampled from the model until \(samples_t\) contains solutions not present in \(pop_t\). Both GA-dA and GA-NADE can use a niching technique. Although any method could be used, here we employ Restricted Tournament Selection (RTR) (\cite{hboa}). A solution from \(samples_t\) is included in \(P_{t+1}\) if it is better than its closest neighbour in a randomly chosen subset of the population of size, \(W\). Whether to use niching or not, as well as other parameters are determined through a parameter sweep on a problem by problem basis.
+There are slight differences in the algorithm based on the neural network model. For the denoising autoencoder (GA-dA), \(trainingData_t\) consists of the fittest unique x\% of solutions from the population are selected. For generating samples in GA-dA, a new set of solutions, \(input_t\), is selected from \(P\) using tournament selection (with replacement). Each member of \(input_t\) is inputted to the dA model, and the output vector, \(y_t\), is sampled from using a binomial distribution, to produce a new solution. For the NADE model (GA-NADE), solutions are sampled from the model until \(samples_t\) contains a set of solutions not present in \(pop_t\), i.e. $samples_t \cap pop_t$. Both GA-dA and GA-NADE can use a niching technique. Although any method could be used, here we employ Restricted Tournament Selection (\cite{hboa}). A solution from \(samples_t\) is included in \(P_{t+1}\) if it is better than its closest neighbour in a randomly chosen subset of the population of size, \(W\). Whether to use niching or not, as well as other parameters are determined through a grid search on a problem by problem basis.
  
 \begin{algorithm}                      % enter the algorithm environment
 \caption{Evolutionary optimisation with the NADE or denoising autoencoder models }          % give the algorithm a caption
@@ -174,7 +195,7 @@ PBIL is a univariate estimation of distribution algorithm which operates on a si
 \[
 p_i = (1-\alpha)p_i + \alpha b_i \ \ \ \ \forall{i \in{[1 ... n]}}
 \]
-where \(b\) is the best solution found in a set of samples from \(p\) at each iteration. The algorithm was chosen to see how a univariate EDA compares to GA-dA and GA-NADE. Additionally, the two neural network methods are similar to PBIL as they also learn online.
+where \(b\) is the best solution found in a set of samples from \(p\) at each iteration. At each iteration there is also a small chance of a mutation to each component of $p$. The algorithm was chosen to see how a univariate EDA compares to GA-dA and GA-NADE. Additionally, the two neural network methods are similar to PBIL as they also learn online.
 
 BOA probabilistically models solutions present in a population by building a Bayesian network. At each iteration, a new Bayesian network, \(BN\), is constructed from a selection of solutions from the population selected by truncation selection. The joint distribution encoded in the network is then sampled from, and the samples are incorporated into the population. BOA was selected for comparison because the model captures multi-variate dependencies and the NADE model approximates a Bayesian network. In BOA the Bayesian network is constructed using a greedy algorithm, that restricts each node to having two parents at most, to limit computational cost.
 \section{Results}
@@ -419,7 +440,7 @@ In the last decade there has been a resurgence of interest in neural network-bas
 
 With both models, although especially with the NADE, the addition of local search could improve performance by providing more exploitation and fine-tuning of solutions, as seen in pelikan2003hierarchical. This would allow the dA or NADE to power a more global search and a share of the responsibility for exploitation to the local search procedure. In the same vein, an interesting extension of the algorithms would be to hybridise them with a selectorecombinative evolutionary algorithm (EA). Here, the EA could maintain the population of solutions, recombining and mutating them, while the neural network models are trained on the population. The EA could draw upon the models to generate genotypes, to guide search in a direction learnt from the structure of the solution space. 
 \subsection{Real Valued, Mixed Integer and Multi-objective Problems}
-Both the NADE and dA can be modified to work with continuous or mixed-integer domains, providing an advantage over other discrete only EDA methods. \textcolor{red}{Sid to Add to this...}
+Both the NADE and dA can be modified to work with continuous or mixed-integer domains, providing an advantage over other discrete only EDA methods. As briefly mentioned earlier, the outputs of the dA can be interpreted as parameters of a distribution from which new solutions are sampled. Therefore, for real-valued problems, the outputs of the dA can be interpreted as means of a Gaussian distribution. Similarly, instead of predicting the means of a Bernouilli distribution, the NADE can be set up to predict the means and variances of a one-dimensional mixture of Gaussians. This real-valued variant of the NADE is called the RNADE (\cite{uria2013rnade}). It is also be possible to mix Bernouilli and Guassian output units, to optimise Mixed Integer Problems, an underrepresented area in EDA optimisation. The fact that the proposed algorithms can be generalised to real-valued problems is very useful since other popular EDAs like BOA and hBOA work only for discrete-valued data.
 
 \section{Conclusion}
 We have presented a novel stochastic evolutionary algorithm based on two neural network models that provide a distribution of mutated samples. Training online, using the best found genotypes, the models are able adaptively learn an exploration distribution, which guides it towards optimal solutions on difficult problems such as the 256-bit HIFF, regularly outperforming a Genetic Algorithm and other EDA methods on a number of problems.
