--- a/ecjsample.bib
+++ b/ecjsample.bib
@@ -1,3 +1,18 @@
+@inproceedings{uria2013rnade,
+  title={RNADE: The real-valued neural autoregressive density-estimator},
+  author={Uria, Benigno and Murray, Iain and Larochelle, Hugo},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={2175--2183},
+  year={2013}
+}
+@inproceedings{cox2014solving,
+  title={Solving building block problems using generative grammar},
+  author={Cox, Chris R and Watson, Richard A},
+  booktitle={Proceedings of the 2014 conference on Genetic and evolutionary computation},
+  pages={341--348},
+  year={2014},
+  organization={ACM}
+}
 @inproceedings{rana1998genetic,
   title={Genetic algorithm behavior in the MAXSAT domain},
   author={Rana, Soraya and Whitley, Darrell},
